Fix Contrast issue

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 :root {
   --color-accent: #fff;
-  --color-primary: #f73f52;
+  --color-primary: #AC0C1C;
   --color-secondary: #11a372;
   --color-text: #5b6064;
 }
